# Chess

./: CMakeLists.txt  README.md
BoardAPI/: Board.cpp  Board.h  BoardFunc.h  Move.h  Pawn.cpp  Piece.cpp  Piece.h
BoardAPI/Pieces/: Pawn.cpp  Pawn.h  Piece.h
